<resources>
    <string name="app_name">POCCrawler</string>

    <!--ÚLTIMOS CONCURSOS-->
    <string name="ultimos_concursos_premio_maximo">Prêmio máximo:</string>
    <string name="ultimos_concursos_estimativa">Prêmio estimado para o próximo concurso:</string>
    <string name="ultimos_concursos_data_sorteio">Data do sorteio:</string>
    <string name="ultimos_concursos_proximo_sorteio">Próximo sorteio:</string>
    <string name="ultimos_concursos_acumulou">Acumulou!</string>
    <string name="ultimos_concursos_um_ganhador">1 ganhador!</string>
    <string name="ultimos_concursos_multiplos_ganhadores">%s ganhadores!</string>
    <string name="ultimos_concursos_resultado_detalhado">Resultado Detalhado</string>

    <!--SORTEIO DETALHADO-->
    <string name="detalhe_sorteio_qtd_ganhadores">Total de ganhadores:</string>
    <string name="detalhe_sorteio_valor_rateio">Rateio:</string>
    <string name="detalhe_sorteio_valor_total">Valor total:</string>

    <!--CARTELA-->
    <string name="cartela_jogo_salvo">Jogo salvo com sucesso!</string>
    <string name="cartela_jogo_alterado">Jogo alterado com sucesso!</string>

    <!--JOGOS SALVOS-->
    <string name="jogos_salvos_conferir">Conferir</string>
    <string name="jogos_salvos_resultado">Resultado</string>
    <string name="jogos_salvos_seus_jogos">Seus Jogos</string>
    <string name="jogos_salvos_mensagem_remover">Tem certeza que deseja remover este jogo de sua lista?</string>
    <string name="jogos_salvos_nenhum_salvo">Você não possui nenhum jogo salvo para esta loteria.</string>

    <!--ERROS-->
    <string name="erro_qtd_maxima_dezenas_selecionadas">Você já selecionou o número máximo de dezenas para esta cartela.</string>
    <string name="erro_qtd_minima_dezenas_selecionadas">Você precisa selecionar %s dezenas para salvar este jogo.</string>

    <string-array name="timemania_times_coracao">
        <item>ABC/RN</item>
        <item>AMÉRICA/MG</item>
        <item>AMÉRICA/RJ</item>
        <item>AMÉRICA/RN</item>
        <item>AMERICANO/RJ</item>
        <item>ATLÉTICO/GO</item>
        <item>ATLÉTICO/MG</item>
        <item>ATLÉTICO/PR</item>
        <item>AVAÍ/SC</item>
        <item>BAHIA/BA</item>
        <item>BANGU/RJ</item>
        <item>BARUERI/SP</item>
        <item>BOTAFOGO/PB</item>
        <item>BOTAFOGO/RJ</item>
        <item>BRAGANTINO/SP</item>
        <item>BRASILIENSE/DF</item>
        <item>CEARÁ/CE</item>
        <item>CORINTHIANS/SP</item>
        <item>CORITIBA/PR</item>
        <item>CRB/AL</item>
        <item>CRICIÚMA/SC</item>
        <item>CRUZEIRO/MG</item>
        <item>CSA/AL</item>
        <item>DESPORTIVA/ES</item>
        <item>FUIGUEIRENSE/SC</item>
        <item>FLAMENGO/RJ</item>
        <item>FLUMINENSE/RJ</item>
        <item>FORTALEZA/CE</item>
        <item>GAMA/DF</item>
        <item>GOIÁS/GO</item>
        <item>GRÊMIO/RS</item>
        <item>GUARANI/SP</item>
        <item>INTER DE LIMEIRA/SP</item>
        <item>INTERNACIONAL/RS</item>
        <item>IPATINGA/MG</item>
        <item>ITUANO/SP</item>
        <item>JI-PARANÁ/PR</item>
        <item>JOINVILLE/SC</item>
        <item>JUVENTUDE/RS</item>
        <item>JUVENTUS/SP</item>
        <item>LONDRINA/PR</item>
        <item>MARÍLIA/SP</item>
        <item>MIXTO/MT</item>
        <item>MOTO CLUBE/MA</item>
        <item>NACIONAL/AM</item>
        <item>NÁUTICO/PE</item>
        <item>OLARIA/RJ</item>
        <item>OPERÁRIO/PR</item>
        <item>PALMAS/TO</item>
        <item>PALMEIRAS/SP</item>
        <item>PARANÁ/PR</item>
        <item>PAULISTA/SP</item>
        <item>PAYSANDU/PA</item>
        <item>PONTE PRETA/SP</item>
        <item>PORT. DE DESPORTOS/SP</item>
        <item>REMO/PA</item>
        <item>RIO BRANCO/AC</item>
        <item>RIO BRANCO/ES</item>
        <item>RIVER/PI</item>
        <item>RORAIMA/RR</item>
        <item>SAMPAIO CORRÊA/MA</item>
        <item>SANTA CRUZ/PE</item>
        <item>SANTO ANDRÉ/SP</item>
        <item>SANTOS/SP</item>
        <item>SÃO CAETANO/SP</item>
        <item>SÃO PAULO/SP</item>
        <item>SÃO RAIMUNDO/AM</item>
        <item>SERGIPE/SE</item>
        <item>SPORT/PE</item>
        <item>TREZE/PB</item>
        <item>TUNA LUSO/PA</item>
        <item>UBERLÂNDIA/MG</item>
        <item>UNIÃO BARBARENSE/SP</item>
        <item>UNIÃO SÃO JOÃO/SP</item>
        <item>VASCO DA GAMA/RJ</item>
        <item>VILA NOVA/GO</item>
        <item>VILLA NOVA/MG</item>
        <item>VITÓRIA/BA</item>
        <item>XV DE PIRACICABA/SP</item>
        <item>YPIRANGA/AP</item>
    </string-array>

</resources>
