<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/margin_border"
    app:cardElevation="4dp">

    <LinearLayout style="@style/SimpleLinearLayoutVertical"
        android:padding="@dimen/padding_normal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout style="@style/SimpleLinearLayoutHorizontal"
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/margin_border"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/tvConcurso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/font_huge"
                    android:textStyle="bold"
                    android:text="2095"/>

                <TextView
                    android:id="@+id/tvDataConcurso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/margin_small"
                    android:textSize="@dimen/font_normal"
                    android:textColor="@color/cinza"
                    android:text="(10/12/2018)"/>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rlConferir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true">

                <Button
                    android:id="@+id/btnConferir"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:padding="@dimen/padding_tiny"
                    android:layout_centerVertical="true"
                    android:textAllCaps="false"
                    android:textColor="@color/branco"
                    android:text="@string/jogos_salvos_conferir"/>

                <ProgressBar
                    android:id="@+id/progressConferir"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:visibility="gone"/>

            </RelativeLayout>

        </RelativeLayout>

        <View style="@style/ViewSeparator"
            android:layout_marginTop="@dimen/margin_small"/>

        <LinearLayout style="@style/SimpleLinearLayoutVertical"
            android:id="@+id/llResultado"
            android:layout_marginTop="@dimen/margin_small"
            android:visibility="gone">

            <TextView style="@style/TextoCentralizado"
                android:textStyle="bold"
                android:textSize="@dimen/font_small"
                android:textColor="@color/preto"
                android:text="@string/jogos_salvos_resultado"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvDezenasResultado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:layoutManager="android.support.v7.widget.GridLayoutManager"
                app:spanCount="6"/>

            <View style="@style/ViewSeparator"
                android:layout_marginTop="@dimen/margin_border"
                android:layout_marginBottom="@dimen/margin_border"/>

        </LinearLayout>

        <TextView style="@style/TextoCentralizado"
            android:layout_marginTop="@dimen/margin_border"
            android:textStyle="bold"
            android:textSize="@dimen/font_small"
            android:textColor="@color/preto"
            android:text="@string/jogos_salvos_seus_jogos"/>

        <View style="@style/ViewSeparator"
            android:layout_marginTop="@dimen/margin_border"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvJogosSalvos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:nestedScrollingEnabled="false"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>

    </LinearLayout>

</android.support.v7.widget.CardView>