<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_border"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    app:cardElevation="4dp">

    <LinearLayout style="@style/SimpleLinearLayoutVertical">

        <View
            android:id="@+id/viewTop"
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_normal">

            <LinearLayout style="@style/SimpleLinearLayoutHorizontal"
                android:layout_centerVertical="true">

                <ImageView
                    android:id="@+id/ivIconeLoteria"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:id="@+id/tvNomeLoteria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_border"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"
                    android:textSize="@dimen/font_huge"
                    android:text="Mega-Sena"/>

            </LinearLayout>

            <LinearLayout style="@style/SimpleLinearLayoutVertical"
                android:layout_width="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/tvNumeroConcurso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/font_normal"
                    android:text="2095"/>

                <TextView
                    android:id="@+id/tvDataConcurso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/font_normal"
                    android:text="10/11/2018"/>

            </LinearLayout>

        </RelativeLayout>

        <View
            android:id="@+id/viewBottom"
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <LinearLayout style="@style/SimpleLinearLayoutVertical"
            android:padding="@dimen/padding_normal">

            <TextView style="@style/TextoCentralizado"
                android:textSize="@dimen/font_small"
                android:textColor="@color/preto"
                android:text="@string/ultimos_concursos_premio_maximo"/>

            <TextView style="@style/TextoCentralizado"
                android:id="@+id/tvGanhadores"
                android:textSize="@dimen/font_huge"
                android:textStyle="bold"
                android:text="Acumulou!"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvSorteio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_border"/>

            <TextView style="@style/TextoCentralizado"
                android:layout_marginTop="@dimen/margin_normal"
                android:textColor="@color/preto"
                android:text="@string/ultimos_concursos_estimativa"/>

            <TextView style="@style/TextoCentralizado"
                android:id="@+id/tvValorEstimado"
                android:textSize="@dimen/font_huge"
                android:textStyle="bold"
                android:text="R$ 30.000.000,00"/>

            <LinearLayout style="@style/SimpleLinearLayoutHorizontal"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/margin_border"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/preto"
                    android:text="@string/ultimos_concursos_proximo_sorteio"/>

                <TextView
                    android:id="@+id/tvDataProximoSorteio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:textColor="@color/preto"
                    android:textStyle="bold"
                    android:text="20/11/2018"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>